<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/ll_footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/ui_margin_16dp">

            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout_description"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/ui_margin_16dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/text_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ui_margin_16dp"
                android:text="@string/checkout_total"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_card_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableRight="@drawable/ic_credit_card_black_24dp"
                android:hint="@string/checkout_card_number"
                android:inputType="phone"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/edit_card_date"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:hint="@string/checkout_card_date"
                    android:inputType="date"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_card_cvc"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/ic_lock_black_24dp"
                    android:hint="@string/checkout_card_cvc"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_card_holder_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableRight="@drawable/ic_person_black_24dp"
                android:hint="@string/checkout_card_holder"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ui_margin_16dp"
                android:layout_marginTop="@dimen/ui_margin_16dp"
                android:layout_marginRight="@dimen/ui_margin_16dp"
                android:background="@color/colorAccent"
                android:text="@string/checkout_payment"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ui_margin_16dp"
                android:gravity="center"
                android:text="@string/checkout_or"
                android:textColor="@color/colorPrimary" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ui_margin_16dp">

                <include
                    android:id="@+id/pwg_button"
                    layout="@layout/pay_with_google_button"
                    android:layout_width="@dimen/buy_button_width"
                    android:layout_height="@dimen/buy_button_height"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/pwg_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/pwg_status_checking" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/ui_margin_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_phone"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_email"
            android:textColor="@android:color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
