<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_divider"/>

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_total"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/text_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ui_margin_16dp"
        android:layout_marginRight="@dimen/ui_margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/view_divider"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cart_total"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/button_go_to_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ui_margin_16dp"
        android:layout_marginLeft="@dimen/ui_margin_16dp"
        android:layout_marginRight="@dimen/ui_margin_16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/cart_go_to_payment"
        app:layout_constraintTop_toBottomOf="@id/text_total"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_footer"
        app:layout_constraintVertical_chainStyle="packed"/>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ui_margin_16dp"
        android:padding="@dimen/ui_margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/button_go_to_payment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:text="@string/main_phone"/>

        <TextView
            android:id="@+id/text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:text="@string/main_email"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
